# my_try_for_minecraft

./: CMakeLists.txt  README.md
src/: helpsheet.txt  main.cpp  to-do list.txt  voxel_manager.cpp  voxel_manager.h
src/resources/shaders/: fragment.glsl  vertex.glsl
